--- a/main.html
+++ b/main.html
@@ -1,7 +1,10 @@
 <!doctype html>
 <head>
   <title>Off a bridge</title>
+  <script src="main.js"></script>
+  <script>
+    window.onload = main;
+  </script>
 </head>
 <body>
-  yo guys
 </body>
