move map to map.js

--- a/main.html
+++ b/main.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <head>
   <title>Off a bridge</title>
+  <script src="map.js"></script>
   <script src="main.js"></script>
   <script>
     window.onload = main;
