--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
   <script src='js/box2d/dynamics/joints/b2RevoluteJoint.js'></script>
   <script src='js/box2d/dynamics/joints/b2RevoluteJointDef.js'></script>
 
-  <script src="map.js"></script>
-  <script src="main.js"></script>
+  <script src="js/map.js"></script>
+  <script src="js/main.js"></script>
   <script>
     window.onload = main;
   </script>
