--- a/index.html
+++ b/index.html
@@ -75,6 +75,8 @@
   <script src='js/box2d/dynamics/joints/b2RevoluteJoint.js'></script>
   <script src='js/box2d/dynamics/joints/b2RevoluteJointDef.js'></script>
 
+  <script src="socket.io/socket.io.js"></script>
+
   <script src="js/map.js"></script>
   <script src="js/main.js"></script>
   <script>
