Players has images now

--- a/index.html
+++ b/index.html
@@ -83,6 +83,10 @@
   <script>
     window.onload = main;
   </script>
+
+  <style>
+    body { cursor: crosshair; }
+  </style>
 </head>
 <body>
 </body>
